--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,11 @@
     <title>MyGameCollection</title>
 
     <!-- Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          rel="stylesheet">
+
+    <!-- CSS propio -->
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
 </head>
 
 <body>
@@ -18,8 +21,8 @@
 
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
+                    data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -37,10 +40,12 @@
                            class="form-control"
                            id="palabraClave"
                            th:value="${palabraClave}"
-                           placeholder="titulo o parte de la observacion (sensible a mayusculas y minusculas)"
+                           placeholder="título o parte de la observación"
                            size="75">
                 </div>
-                <input type="submit" class="btn btn-primary mb-2" value="Buscar">
+                <input type="submit"
+                       class="btn btn-primary mb-2"
+                       value="Buscar">
             </form>
         </div>
 
@@ -55,31 +60,11 @@
                     </a>
 
                     <ul class="dropdown-menu">
-                        <li>
-                            <a th:href="@{/admin/plataforma/}">
-                                Gestión de plataformas
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="@{/admin/titulo/}">
-                                Gestión de títulos
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="@{/admin/genero/}">
-                                Gestión de generos
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="@{/admin/region/}">
-                                Gestión de regiones
-                            </a>
-                        </li>
-                        <li>
-                            <a th:href="@{/admin/importar-exportar}">
-                                Importar y exportar
-                            </a>
-                        </li>
+                        <li><a th:href="@{/admin/plataforma/}">Gestión de plataformas</a></li>
+                        <li><a th:href="@{/admin/titulo/}">Gestión de títulos</a></li>
+                        <li><a th:href="@{/admin/genero/}">Gestión de géneros</a></li>
+                        <li><a th:href="@{/admin/region/}">Gestión de regiones</a></li>
+                        <li><a th:href="@{/admin/importar-exportar}">Importar y exportar</a></li>
                     </ul>
                 </li>
 
@@ -88,7 +73,6 @@
     </div>
 </nav>
 
-
 <div class="container-fluid">
     <div class="row">
 
@@ -96,42 +80,47 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <h3>Plataformas</h3>
             <ul class="nav nav-sidebar">
-
                 <li th:each="plataforma : ${plataformas}">
                     <a th:href="@{/(idPlataforma=${plataforma.id})}"
                        th:text="${plataforma.nombre}">
                         Plataforma
                     </a>
                 </li>
-
             </ul>
         </div>
 
-        <!-- Títulos -->
+        <!-- Contenido principal -->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
             <h1>Nuestros títulos:</h1>
 
             <div class="row">
 
-                <div class="col-sm-3" th:each="titulo : ${titulos}">
+                <!-- 🔥 CLASE game-card (CLAVE PARA EL RESPONSIVE) -->
+                <div class="game-card"
+                     th:each="titulo : ${titulos}">
+
                     <a th:href="@{/titulo/{id}(id=${titulo.id})}">
 
                         <div class="col-item">
 
                             <div class="photo">
                                 <img class="img-responsive"
-                                     th:src="${#strings.isEmpty(titulo.imagen)} ?
-                                           '/img/notfound.png' : '/img/games/' + ${titulo.imagen}"
+                                     th:src="${#strings.isEmpty(titulo.imagen)}
+                                              ? '/img/notfound.png'
+                                              : '/img/games/' + ${titulo.imagen}"
                                      alt="Imagen del juego">
                             </div>
 
                             <div class="info">
-                                <h4 class="product-name" th:text="${titulo.nombre}">
+                                <h4 class="product-name"
+                                    th:text="${titulo.nombre}">
                                     Nombre del juego
                                 </h4>
                             </div>
+
                         </div>
+
                     </a>
                 </div>
 
@@ -141,7 +130,6 @@
 
     </div>
 </div>
-
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
