--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -63,6 +63,17 @@
 
 <div class="container">
 
+  <!-- ✅ Botón editar arriba a la derecha -->
+  <div class="row" style="margin-bottom: 15px;">
+    <div class="col-xs-12 text-right">
+      <a class="btn btn-primary"
+         th:href="@{/admin/titulo/editar/{id}(id=${titulo.id})}">
+        <span class="glyphicon glyphicon-pencil"></span>
+        Editar
+      </a>
+    </div>
+  </div>
+
   <!-- Cabecera con imagen y nombre -->
   <div class="row">
     <div class="col-md-4">
